--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*Style for resume */
+
 body {
   font-family: 'Open Sans',arial, sans-serif;
   font-size: 1em;
@@ -21,7 +23,24 @@ strong {
 h2 {
   font-size: 1.5em;
   text-transform: uppercase;
-  color: #33485e;
-  font-weight: 400;
-  
+  color:#fff ;
+  background-color: #33485e
+}
+
+h3 {
+  font-weight: 600;
+  font-size:1.5em;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+h5 {
+  font-style: italic;
+  font-size: 1em;
+}
+
+li {
+  font-size: 1em;
 }
