--- a/style.css
+++ b/style.css
@@ -6,8 +6,20 @@ body {
   color:#444;
   font-weight:400;
 }
+/*styles for container */
+#container{
+  width: 100%;
+  max-width: 1200px;
+  padding-bottom: 50px;
+  margin: 0 auto;
+}
+
 /*name at top */
-h1 {
+#name {
+  width: 60%;
+  min-width: 300px;
+  margin: 0 auto;
+  border-bottom: 1px solid #33485e;
   font-size: 3em;
   text-transform:uppercase;
   text-align: center;
@@ -20,7 +32,13 @@ strong {
   color:#33485e
 }
 /*experience */
-h2 {
+#sectionheader {
+  margin-top: 20px
+  margin-bottom:10px
+  margin-left:0;
+  margin-right:0;
+  width: 70%;
+  min-width: 300px;
   font-size: 1.5em;
   text-transform: uppercase;
   color:#fff ;
