--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ strong {
   color:#33485e
 }
 /*experience */
-#sectionheader {
+.sectionheader {
   margin-top: 20px
   margin-bottom:10px
   margin-left:0;
@@ -45,20 +45,21 @@ strong {
   background-color: #33485e
 }
 /*job title */
-h3 {
+.jobtitle {
   font-weight: 600;
   font-size:1.5em;
 }
 /*company name */
-h4 {
-  font-size: 1.5em;
+.organization {
+  font-size: 1.25em;
 }
 /* job dates */
-h5 {
+.date {
+  margin: 2px 0px 0px 0px;
   font-style: italic;
   font-size: 1em;
 }
-/*contanct info, skills, education */
+/*contact info, skills, education */
 li {
   font-size: 1em;
 }
@@ -66,4 +67,34 @@ li {
 #headline {
   font-size: 18px;
   color: blue;
+}
+/*i added a style.css for the description in the paragraph elements */
+.description {
+margin: 10px 0px 10px 0px;
+}
+
+.menu {
+  margin: 0px;
+  align-items: center;
+  display: inline;
+}
+
+#degrees {
+  margin-top: 5px;
+  margin-right:0px;
+  margin-bottom:0px;
+  margin-left: 0px;
+}
+
+#do {
+  margin-top: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
+}
+
+#title {
+  font-weight: 600;
+  align-items: center;
+  margin-top: 20px 0px 0px 0px;
 }
