finished what i was able to do.
one question at the end. "top mission statement. I'm not able to get it to be exactly like the example that was shown."

--- a/style.css
+++ b/style.css
@@ -98,3 +98,10 @@ margin: 10px 0px 10px 0px;
   align-items: center;
   margin-top: 20px 0px 0px 0px;
 }
+
+.top {
+  width: 60%;
+  min-width: 300px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
